# setaur-sdk-python

./: CHANGELOG.md  README.md  pyproject.toml
examples/: advanced_example.py  event_example.py  log_example.py  sensor_example.py
src/setaur/: __init__.py  _client.py  _envelope.py  _log_handler.py  _span.py  _span_context.py  _types.py
tests/: bench_client.py  conftest.py  test_client.py  test_envelope.py  test_event.py  test_log_handler.py  test_span.py
