[project]
name = "setaur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noah Shibley", email = "noah@calque.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "cbor2>=6.1.2",
    "nats-py>=2.15.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
