[project]
name = "setaur"
version = "0.2.1"
description = "Robotics telemetry SDK — publish sensor streams, structured events, and distributed traces to the Setaur observability platform"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Noah Shibley", email = "noah@calque.ai" }
]
keywords = ["robotics", "telemetry", "observability", "tracing", "distributed-tracing", "sensors", "events", "ros", "autonomous", "setaur"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "cbor2>=6.1.2",
    "nats-py[nkeys]>=2.15.0",
]

[project.urls]
Homepage = "https://setaur.ai"
Documentation = "https://setaur.ai/docs/python-sdk"
Repository = "https://github.com/calque-ai/setaur-sdk-python"
"Bug Tracker" = "https://github.com/calque-ai/setaur-sdk-python/issues"

[build-system]
requires = ["uv_build>=0.11.21, <0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
